--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
   <br><br>
-  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as an Assistant Professor in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) / Research Assistants / Visiting students, check out <a href=
+  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as a <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professor (SAP)</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) and Visiting students, check out <a href=
   isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
   
   <!-- 
@@ -80,7 +80,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <!--end of Navigation bar-->
   
   <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
-  I will join Singapore University of Technology and Design (SUTD) as a tenure-track Assistant Professor in early 2025. 
+  I will join Singapore University of Technology and Design as a tenure-track <i>SUTD Assistant Professor</i> in early 2025. 
   Currently, I am a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>, Singapore. Prior to that, I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
 
   <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
@@ -107,6 +107,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3 id="news">News</h3>
     <ul>
+      <li>[Jan 2025] Thrilled to receive the prestigious "<a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>" award</li>
       <li>[Oct 2024] Glad to be invited to give a keynote talk at SSNLP 2024.</li>
       <li>[Aug 2024] I will serve as an Area Chair for ICLR 2025</li>
       <li>[July 2024] <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">SeaLLMs 3</a> is here - the latest iteration of SeaLLMs with SOTA performance of diverse tasks while specifically enhanced to be more trustworthy. Check out the <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">model</a> and <a href="https://arxiv.org/abs/2407.19672">paper</a>!</li>
@@ -126,6 +127,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
+    <li> <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>, 2025</li>
     <li> Alibaba Star, Alibaba Group, 2022</li>
     <li> National Scholarship, 2017</li>
     <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are awarded every year</i>), 2017</li>
