--- a/getinvolved.html
+++ b/getinvolved.html
@@ -46,7 +46,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
   <br><br>
-  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as an Assistant Professor in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) / Research Assistants / Visiting students, check out <a href=
+  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as a <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professor (SAP)</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) and Visiting students, check out <a href=
   isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
 
   
@@ -80,7 +80,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   </div>
   <!--end of Navigation bar-->
 
-  Thanks for your interest in working with us! I will join <a href="https://istd.sutd.edu.sg/">ISTD</a> @ <a href="https://www.sutd.edu.sg/">SUTD</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall batch), Research Assistants, and Visiting students.
+  Thanks for your interest in working with us! I will join <a href="https://istd.sutd.edu.sg/">ISTD</a> @ <a href="https://www.sutd.edu.sg/">SUTD</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall batch) and Visiting students.
 
   
   <h3><a name="bio"></a>Readme</h3>
@@ -95,11 +95,11 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   </ul>
 
-  <h3><a name="teaching"></a>Currently Openings</h3>
+  <h3><a name="teaching"></a>Currently Openings (Updated on mid Jan, 2025)</h3>
   <ul>
     <li>For PhD students: I'm currently looking for students of <strong>Fall 2025 batch</strong>. The <a href="https://www.sutd.edu.sg/Admissions/Graduate/PhD-Programmes/SUTD-PhD-Programme/Application">application deadline</a> is March 2025. You will be fully supported by MoE funding. </li>
-    <li>For RA/Visiting students: You can start from Spring 2025. The funding is flexible, you can either self-funded / CSC-funded, or working as paid RA at SUTD. </li>
-    <li>I also accept remote collaborations (RA/research interns).</li>
+    <li>For Visiting students: You can start from Spring 2025, remote collaborations are also welcome. I'm also looking for one CSC-funded student starting from Fall 2025.</li>
+    <li>For paid RA: no available positions currently</li>
   </ul>
   
   If you are interested in any positions mentioned above, feel free to send me an email with:
