--- a/getinvolved.html
+++ b/getinvolved.html
@@ -41,15 +41,15 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   
-  Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
-  
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
+    <code class="language-plaintext highlighter-rouge">wxzhang [at] sutd.edu.sg</code>
+  <br>
+  <br>SUTD Assistant Professor
+  <br>Information Systems Technology and Design (ISTD) Pillar
+  <br>Singapore University of Technology and Design
 
-  <br><br>
-  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as a <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professor (SAP)</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) and Visiting students, check out <a href=
-  isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
+  <br><br><a href="https://www.sutd.edu.sg/profile/zhang-wenxuan">Faculty Page</a> | <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
-  
+  <br><br>  
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   -->
