--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   
-  Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
-  
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
+  <code class="language-plaintext highlighter-rouge">wxzhang [at] sutd.edu.sg</code>
+  <br>
+  <br>SUTD Assistant Professor
+  <br>Information Systems Technology and Design (ISTD) Pillar
+  <br>Singapore University of Technology and Design
+
+  <br><br><a href="https://www.sutd.edu.sg/profile/zhang-wenxuan">Faculty Page</a> | <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
   <br><br>
-  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as a <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professor (SAP)</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) and Visiting students, check out <a href=
-  isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
   
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
@@ -80,8 +82,8 @@ PLS ask for permission & add a link to this website before you directly copy and
   <!--end of Navigation bar-->
   
   <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
-  I will join Singapore University of Technology and Design as a tenure-track <i>SUTD Assistant Professor</i> in early 2025. 
-  Currently, I am a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>, Singapore. Prior to that, I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
+  I am currently a tenure-track <i>SUTD Assistant Professor</i> at the Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD). Before this, I was a research scientist at Alibaba Group Singapore. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
+  <!-- , where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.-->
 
   <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
   I am passinate to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve understanding, safety and robustness of language models. 
@@ -89,7 +91,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <br><br>Research projects I'm working on / plan to work on:
   <ul>
-    <li> 
+    <li>
       [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a> Project)
     </li>
     <li> 
@@ -107,6 +109,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3 id="news">News</h3>
     <ul>
+      <li>[Feb 2025] I officially joined SUTD!
       <li>[Jan 2025] Thrilled to receive the prestigious "<a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>" award</li>
       <li>[Oct 2024] Glad to be invited to give a keynote talk at SSNLP 2024.</li>
       <li>[Aug 2024] I will serve as an Area Chair for ICLR 2025</li>
@@ -164,7 +167,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: Dec 2024</p>
+  <p style="text-align:center;">Last updated: Feb 2025</p>
 </div>
 
 </body>
