--- a/research.html
+++ b/research.html
@@ -41,13 +41,15 @@
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   
-  Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
-  
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
+  <code class="language-plaintext highlighter-rouge">wxzhang [at] sutd.edu.sg</code>
+  <br>
+  <br>SUTD Assistant Professor
+  <br>Information Systems Technology and Design (ISTD) Pillar
+  <br>Singapore University of Technology and Design
+
+  <br><br><a href="https://www.sutd.edu.sg/profile/zhang-wenxuan">Faculty Page</a> | <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
   <br><br>
-  <span style="color:orangered;"><i>I will join <a href="https://www.sutd.edu.sg/">SUTD</a> as a <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professor (SAP)</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall) and Visiting students, check out <a href=
-  isakzhang.github.io/getinvolved.html">this page</a> on how to get involved.</i></span>
 
     <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
@@ -98,24 +100,8 @@
         [<a href="https://arxiv.org/abs/2405.20267">paper</a>] [<a href="https://auto-arena.github.io/">project page</a>]
       </li>
       <p> </p>
-
-      <li>
-        <div id="text" style = "color:#1f57b8"></span>Is Translation All You Need? A Study on Solving Multilingual Tasks with Large Language Models</div>
-        Chaoqun Liu, <strong>Wenxuan Zhang☨</strong>, Yiran Zhao, Anh Tuan Luu, Lidong Bing
-        <br>arXiv:2403.10258
-        [<a href="https://arxiv.org/abs/2403.10258">paper</a>] [<a href="">code</a>]
-      </li>
-      <p> </p>
-
-      <!--
-      <li>
-        <div id="text" style = "color:#1f57b8">AdaMergeX: Cross-Lingual Transfer with Large Language Models via Adaptive Adapter Merging        </div>
-        Yiran Zhao, <strong>Wenxuan Zhang</strong>, Huiming Wang, Kenji Kawaguchi, Lidong Bing
-        <br>arXiv:2402.18913
-        [<a href="https://arxiv.org/abs/2402.18913">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/AdaMergeX">data&code</a>]
-      </li>
-      <p> </p>
   
+      <!--
       <li>
         <div id="text" style = "color:#1f57b8">JsonTuning: Towards Generalizable, Robust, and Controllable Instruction Tuning</div>
         Chang Gao, <strong>Wenxuan Zhang☨</strong>, Guizhen Chen, Wai Lam
@@ -128,6 +114,22 @@
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
   <ul>
+      <li>
+        <div id="text" style = "color:#1f57b8"></span>Is Translation All You Need? A Study on Solving Multilingual Tasks with Large Language Models</div>
+        Chaoqun Liu, <strong>Wenxuan Zhang☨</strong>, Yiran Zhao, Anh Tuan Luu, Lidong Bing
+        <br>NAACL 2025
+        [<a href="https://arxiv.org/abs/2403.10258">paper</a>] [<a href="">code</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">AdaMergeX: Cross-Lingual Transfer with Large Language Models via Adaptive Adapter Merging        </div>
+        Yiran Zhao, <strong>Wenxuan Zhang☨</strong>, Huiming Wang, Kenji Kawaguchi, Lidong Bing
+        <br>NAACL 2025
+        [<a href="https://arxiv.org/abs/2402.18913">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/AdaMergeX">data&code</a>]
+      </li>
+      <p> </p>
+
       <li>
         <div id="text" style = "color:#1f57b8"> Zero-to-Strong Generalization: Eliciting Strong Capabilities of Large Language Models Iteratively without Gold Labels </div>
         Chaoqun Liu, Qin Chao, <strong>Wenxuan Zhang☨</strong>, Xiaobao Wu, Boyang Li, Anh Tuan Luu, Lidong Bing
