--- a/getinvolved.html
+++ b/getinvolved.html
@@ -29,6 +29,12 @@ PLS ask for permission & add a link to this website before you directly copy and
     gtag('js', new Date());
     gtag('config', 'UA-134238626-1');
   </script>
+
+  <style>
+    .hidden-content {
+        display: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -80,32 +86,40 @@ PLS ask for permission & add a link to this website before you directly copy and
   </div>
   <!--end of Navigation bar-->
 
-  Thanks for your interest in working with us! I will join <a href="https://istd.sutd.edu.sg/">ISTD</a> @ <a href="https://www.sutd.edu.sg/">SUTD</a> in early 2025. I am actively looking for highly motivated PhD students (2025 Fall batch) and Visiting students.
+  Thanks for your interest in working with us! Please read through this page before dropping me an email.
+  
 
-  
-  <h3><a name="bio"></a>Readme</h3>
-  
-  Here are some general information you might want to know:
-  <br>
-  <ul>
+  <!--<h3><a name="bio"></a>Readme</h3>
+  <button onclick="toggleText()">Here are some general information you might want to know:</button>
+    
+    <div id="myText" class="hidden-content">
+        <ul>
     <li><strong>About Me</strong>: I obtained my PhD from The Chinese University of Hong Kong (CUHK) then joined Alibaba DAMO Academy (达摩院) Singapore with the Alistar Award (阿里星). I have both academic (e.g., analysing LLMs) and industry experience (e.g., training LLMs). A short bio is <a href="./bio.html">here</a> and you can get to know more about me from <a href="https://isakzhang.github.io/index.html">my homepage</a>.</li>
     <li><strong>About SUTD</strong>: SUTD is Singapore's fourth public university established in collaboration with MIT. Though relatively young, its NLP area ranks <strong>No. 41</strong> around the world and <strong>No.16</strong> in Asia (according to CSRanking). I also suggest you checking out where the recent (AI-related) PhD graduates are working now - it's a great indicator if you are considering the PhD program in SUTD :)</li>
     <li><strong>Research directions</strong>: My current research centers on NLP & LLMs, with some specific <a href="https://isakzhang.github.io/index.html">focus areas</a> listed on my main page. While it's great if your interests align with mine, I welcome students from diverse backgrounds working on topics they're passionate about. Feel free to discuss your vision with me.</li>
     <li><strong>Mentoring</strong>: I have mentored students from various background - those without any / with few / with rich research experience, and undergraduate / Master / PhD students. Most of the students publish papers at top conferences and journals with me, and some as their first research papers. You can check out my <a href="isakzhang.github.io/research.html">publication page</a> for details.</li>
 
   </ul>
-
-  <h3><a name="teaching"></a>Currently Openings (Updated on mid Jan, 2025)</h3>
-  <ul>
-    <li>For PhD students: I'm currently looking for students of <strong>Fall 2025 batch</strong>. The <a href="https://www.sutd.edu.sg/Admissions/Graduate/PhD-Programmes/SUTD-PhD-Programme/Application">application deadline</a> is March 2025. You will be fully supported by MoE funding. </li>
-    <li>For Visiting students: You can start from Spring 2025, remote collaborations are also welcome. I'm also looking for one CSC-funded student starting from Fall 2025.</li>
-    <li>For paid RA: no available positions currently</li>
-  </ul>
+    </div>  
+  <br>
+  -->
   
+<h3>Prospective Roles</h3>
+  <ul>
+    <li><strong>Postdocs</strong>: Applicants are expected to have a PhD degree in related fields and an established publication record in top-tier NLP and/or ML conferences/journals. Highly competitive salary and benefits, as well as academic support and resources will be provided. It's completely fine if your research areas don't strictly align with mine, as this can help us conduct interdisciplinary research.</li>
+    <p>
+    <li><strong>PhDs</strong>: I'm actively recruiting 0-2 new PhD student(s) for each intake batch (Spring and Fall each year). You can apply to SUTD's <a href="https://www.sutd.edu.sg/programme-listing/sutd-phd-programme/">PhD program</a> and list me as a potential advisor. You will be supported by <a href="https://sutd.edu.sg/Admissions/Graduate/Scholarships">SUTD</a>/<a href="https://aisingapore.org/research/phd-fellowship-programme/">AISG</a>/<a href="https://www.a-star.edu.sg/Scholarships/for-graduate-studies/singapore-international-graduate-award-singa">SINGA</a>/industry scholarship. Please note that I prefer students to work with me before their official application, as this helps us both determine if we're a good match for this long-term commitment.</li>
+    <p>
+    <li><strong>Research interns / Visiting students</strong>: Research interns are welcome and can typically start anytime. Positions can be either onsite (self-funded/CSC-funded/funded by me) or remote (without salary). Please note that all internships are research-oriented, requiring at least a 6-month commitment to complete one research project. Pls consider your commitment level and available time.</li>
+    <p>
+    <li><strong>RA (non-student status)</strong>: No positions currently available (due to visa quota restrictions)</li>
+  </ul>
+
+  <h3></a>How to Apply</h3>
   If you are interested in any positions mentioned above, feel free to send me an email with:
   <br>
   <ul>
-    <li>Email subject: Position-Time-Name-Affiliation (e.g., "PhD-Fall 2025-Wenxuan Zhang-CUHK")</li>
+    <li>Email subject: Position-Start Time-Name-Affiliation (e.g., "PhD-Fall 2025-Wenxuan Zhang-CUHK")</li>
     <li> Your CV </li>
     <li> Any other information / documents that you think would be helpful for me to know about you (e.g, research interests, research experience, transcripts, future plan, research proposal etc.)
   </ul>
@@ -115,7 +129,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: Dec 2024</p>
+  <p style="text-align:center;">Last updated: Feb 2025</p>
 </div>
 
 </body>
