--- a/index.html
+++ b/index.html
@@ -82,33 +82,35 @@ PLS ask for permission & add a link to this website before you directly copy and
   <!--end of Navigation bar-->
   
   <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
-  I am currently a tenure-track <i>SUTD Assistant Professor</i> at the Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD). Before this, I was a research scientist at Alibaba Group Singapore. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
+  I am currently a tenure-track <i>SUTD Assistant Professor</i> at the Information Systems Technology and Design (ISTD) pillar, <a href="https://www.sutd.edu.sg/">Singapore University of Technology and Design (SUTD)</a>. Before this, I was a research scientist at <a href="https://www.alibabagroup.com/en-US/">Alibaba Group Singapore</a>. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
   <!-- , where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.-->
 
   <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
   I am passinate to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve understanding, safety and robustness of language models. 
   <!--I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.-->
 
-  <br><br>Research projects I'm working on / plan to work on:
+  <br><br>Current and Planned Research Projects:
   <ul>
     <li>
-      [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a> Project)
-    </li>
-    <li> 
-      [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment (<a href="https://arxiv.org/abs/2310.06474">MultiJail</a>)
-    </li>
-    <li> 
-      [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models (<a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>)
+      [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a>, <a href="https://babel-llm.github.io/babel-llm//">Babel</a>)
     </li>
     <li> 
       [<span style="color:royalblue;">Accessiblity</span>] Making LLMs more accessible to general users, through model compression or small-large model collaboration
+    </li>
+    <li> 
+      [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment (<a href="https://arxiv.org/abs/2310.06474">MultiJail</a>, <a href="https://openreview.net/forum?id=yR47RmND1m">Safety Neuron</a>)
+    </li>
+    <li> 
+      [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models (<a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>)
     </li>
     <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
   </ul>
 
 
   <h3 id="news">News</h3>
+  (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>)
     <ul>
+      <li>[Mar 2025] 🔥 We release <a href="https://babel-llm.github.io/babel-llm//">Babel</a> - open-source multilingual LLMs that serve over 90% of global speakers. Two sizes of models (9B and 83B) have been released, both base and chat versions are open-sourced!
       <li>[Feb 2025] I officially joined SUTD!
       <li>[Jan 2025] Thrilled to receive the prestigious "<a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>" award</li>
       <li>[Oct 2024] Glad to be invited to give a keynote talk at SSNLP 2024.</li>
@@ -117,7 +119,7 @@ PLS ask for permission & add a link to this website before you directly copy and
       <li>[June 2024] SeaLLMs was awarded the <i>"Best Innovate for Impact Award"</i> by The International Telecommunication Union (ITU) of United Nations.</li>
       <li>[May 2024] M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
       <li>[Apr 2024] I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
-      <li>[Jan 2024] Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>
+      <!--<li>[Jan 2024] Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>-->
       <li>[Nov 2023] We release <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> - the first LLM dedicated to languages in Southeast Asia region.</li>
       <!--
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
@@ -140,7 +142,8 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3><a name="professional"></a>Professional Service</h3>
   <ul>
-    <li> Area Chair: ICLR 2025, NAACL 2025, EMNLP 2024 </li>
+    <li> Organizing Committee: SSNLP 2025 </li>
+    <li> Area Chair: ACL 2025, COLM 2025, ICLR 2025, NAACL 2025, EMNLP 2024 </li>
     <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, ICML, AAAI, IJCAI; SIGKDD, WWW, WSDM
     <li> Journal Reviewer: Computational Linguistics (CL), ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
   </ul>
