--- a/research.html
+++ b/research.html
@@ -85,11 +85,11 @@
 
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
-        <li>
-        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> SeaLLMs 3: Open Foundation and Chat Multilingual Large Language Models for Southeast Asian Languages</div>
-        <strong>Wenxuan Zhang*</strong>, Hou Pong Chan*, Yiran Zhao*, Mahani Aljunied*, Jianyu Wang*, Chaoqun Liu, Yue Deng, Zhiqiang Hu, Weiwen Xu, Yew Ken Chia, Xin Li, Lidong Bing
-        <br>arXiv:2407.19672
-        [<a href="https://arxiv.org/abs/2407.19672">paper</a>] [<a href="https://damo-nlp-sg.github.io/SeaLLMs/">project page</a>]
+      <li>
+        <div id="text" style = "color:#1f57b8"> <span style="color:#c30"><i>[NEW]</i></span> Babel - Open Multilingual Large Language Models Serving Over 90% of Global Speakers</div>
+        Yiran Zhao, Chaoqun Liu, Yue Deng, Jiahao Ying, Mahani Aljunied, Zhaodonghui Li, Lidong Bing, Hou Pong Chan, Yu Rong, Deli Zhao, <strong>Wenxuan Zhang☨</strong>
+        <br>arXiv 2503.00865
+        [<a href="https://arxiv.org/pdf/2503.00865">paper</a>] [<a href="https://babel-llm.github.io/babel-llm/">project page</a>] [<a href="https://huggingface.co/collections/Tower-Babel/babel-67c172157372d4d6c4b4c6d5">open models</a>]
       </li>
       <p> </p>
 
@@ -114,6 +114,22 @@
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
   <ul>
+      <li>
+        <div id="text" style = "color:#1f57b8">Understanding and Enhancing Safety Mechanisms of LLMs via Safety-Specific Neuron</div>
+        Yiran Zhao, <strong>Wenxuan Zhang</strong>, Yuxi Xie, Anirudh Goyal, Kenji Kawaguchi, Michael Shieh
+        <br>ICLR 2025
+        [<a href="https://openreview.net/forum?id=yR47RmND1m">paper</a>] [<a href="https://github.com/zhaoyiran924/Safety-Neuron">data&code</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">SeaLLMs 3: Open Foundation and Chat Multilingual Large Language Models for Southeast Asian Languages</div>
+        <strong>Wenxuan Zhang*</strong>, Hou Pong Chan*, Yiran Zhao*, Mahani Aljunied*, Jianyu Wang*, Chaoqun Liu, Yue Deng, Zhiqiang Hu, Weiwen Xu, Yew Ken Chia, Xin Li, Lidong Bing
+        <br>NAACL 2025 System Demostration
+        [<a href="https://arxiv.org/abs/2407.19672">paper</a>] [<a href="https://damo-nlp-sg.github.io/SeaLLMs/">project page</a>]
+      </li>
+      <p> </p>
+
       <li>
         <div id="text" style = "color:#1f57b8"></span>Is Translation All You Need? A Study on Solving Multilingual Tasks with Large Language Models</div>
         Chaoqun Liu, <strong>Wenxuan Zhang☨</strong>, Yiran Zhao, Anh Tuan Luu, Lidong Bing
