--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img/wxzhang-2023-square2.jpg" alt="wxzhang-photo">
+  <img class="avatar" src="img/wxzhang-2025-square.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   
@@ -110,6 +110,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <h3 id="news">News</h3>
   (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>)
     <ul>
+      <li>[Mar 2025] 🔥 We release <a href="https://damo-nlp-sg.github.io/SeaLLMs-Audio/">SeaLLMs-Audio</a> - the multimodal (audio) extension of SeaLLMs and the first large audio-language model designed to support multiple Southeast Asian languages!
       <li>[Mar 2025] 🔥 We release <a href="https://babel-llm.github.io/babel-llm//">Babel</a> - open-source multilingual LLMs that serve over 90% of global speakers. Two sizes of models (9B and 83B) have been released, both base and chat versions are open-sourced!
       <li>[Feb 2025] I officially joined SUTD!
       <li>[Jan 2025] Thrilled to receive the prestigious "<a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>" award</li>
