--- a/getinvolved.html
+++ b/getinvolved.html
@@ -103,7 +103,7 @@ PLS ask for permission & add a link to this website before you directly copy and
     </div>  
   <br>
   -->
-  
+
 <h3>Prospective Roles</h3>
   <ul>
     <li><strong>Postdocs</strong>: Applicants are expected to have a PhD degree in related fields and an established publication record in top-tier NLP and/or ML conferences/journals. Highly competitive salary and benefits, as well as academic support and resources will be provided. It's completely fine if your research areas don't strictly align with mine, as this can help us conduct interdisciplinary research.</li>
@@ -112,7 +112,15 @@ PLS ask for permission & add a link to this website before you directly copy and
     <p>
     <li><strong>Research interns / Visiting students</strong>: Research interns are welcome and can typically start anytime. Positions can be either onsite (self-funded/CSC-funded/funded by me) or remote (without salary). Please note that all internships are research-oriented, requiring at least a 6-month commitment to complete one research project. Pls consider your commitment level and available time.</li>
     <p>
-    <li><strong>RA (non-student status)</strong>: No positions currently available (due to visa quota restrictions)</li>
+    <li><strong>RA (non-student status)</strong>: No positions currently available (due to visa quota restrictions), unless you are Singapore PR or citizen.</li>
+  </ul>
+
+
+  <h3><span style="color:orangered;">Current Openings (update on Apr 2025)</span></h3>
+  <ul>
+    <li><strong>Postdoc</strong>: 1 position available, start date is flexible
+    <li><strong>PhD</strong>: 1 position available, for Spring 2026 or Fall 2026 intake
+    <li><strong>On-site Visiting Students</strong> (financially supported by my grant, for 6-12 months): 2-3 positions available. Open to Bachelor / Master / PhD students, but priority will be given to students with relevant research / publication experience.
   </ul>
 
   <h3></a>How to Apply</h3>
@@ -129,7 +137,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: Feb 2025</p>
+  <p style="text-align:center;">Last updated: Apr 2025</p>
 </div>
 
 </body>
