--- a/index.html
+++ b/index.html
@@ -82,20 +82,20 @@ PLS ask for permission & add a link to this website before you directly copy and
   <!--end of Navigation bar-->
   
   <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
-  I am currently a tenure-track <i>SUTD Assistant Professor</i> at the Information Systems Technology and Design (ISTD) pillar, <a href="https://www.sutd.edu.sg/">Singapore University of Technology and Design (SUTD)</a>. Before this, I was a research scientist at <a href="https://www.alibabagroup.com/en-US/">Alibaba Group Singapore</a>. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
+  I am currently a tenure-track Assistant Professor at the Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD), under the prestigious "<a href=https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships>SUTD Assistant Professorship (SAP)</a>" scheme (a competitive research award for early-career faculty). Before this, I was a research scientist at <a href="https://www.alibabagroup.com/en-US/">Alibaba Group Singapore</a>. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
   <!-- , where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.-->
 
   <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
   I am passinate to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve understanding, safety and robustness of language models. 
   <!--I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.-->
 
-  <br><br>Current and Planned Research Projects:
+  <br><br>Current and Planned Research Projects (more on <a href="https://isakzhang.github.io/research.html">research page</a>):
   <ul>
     <li>
       [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a>, <a href="https://babel-llm.github.io/babel-llm//">Babel</a>)
     </li>
     <li> 
-      [<span style="color:royalblue;">Accessiblity</span>] Making LLMs more accessible to general users, through model compression or small-large model collaboration
+      [<span style="color:royalblue;">Accessiblity</span>] Making LLMs more accessible, through model compression or model collaboration
     </li>
     <li> 
       [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment (<a href="https://arxiv.org/abs/2310.06474">MultiJail</a>, <a href="https://openreview.net/forum?id=yR47RmND1m">Safety Neuron</a>)
@@ -103,13 +103,21 @@ PLS ask for permission & add a link to this website before you directly copy and
     <li> 
       [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models (<a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>)
     </li>
+    <li> 
+      [<span style="color:royalblue;">Mechanism</span>] Understaning what is happening inside LLMs (<a href="">Knowledge</a> & <a href="">Reasoning</a>) 
+    </li>
     <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
   </ul>
+
+  📍<span style="color:orangered;">Openings:</span> I'm actively looking for self-motivated students to join us, please check <a href="https://isakzhang.github.io/getinvolved.html">how to get invovled</a>.
 
 
   <h3 id="news">News</h3>
   (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>)
+  <div style="max-height: 300px; overflow-y: auto;">
     <ul>
+      <li>[Apr 2025] I was interviewed at AIMX Podcast to share my thoughts on various topics of multilingual LLMs, also got the chance to share SeaLLMs-Audio and Babel project, <a href="https://open.spotify.com/episode/5BKRSUdU1jh3dGzCVeEUf7">check it out on Spotify</a>!
+      <li>[Mar 2025] I will serve as an area chair for COLM 2025 and NeurIPS 2025
       <li>[Mar 2025] 🔥 We release <a href="https://damo-nlp-sg.github.io/SeaLLMs-Audio/">SeaLLMs-Audio</a> - the multimodal (audio) extension of SeaLLMs and the first large audio-language model designed to support multiple Southeast Asian languages!
       <li>[Mar 2025] 🔥 We release <a href="https://babel-llm.github.io/babel-llm//">Babel</a> - open-source multilingual LLMs that serve over 90% of global speakers. Two sizes of models (9B and 83B) have been released, both base and chat versions are open-sourced!
       <li>[Feb 2025] I officially joined SUTD!
@@ -128,28 +136,28 @@ PLS ask for permission & add a link to this website before you directly copy and
       <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
       <!-- <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li> -->
     </ul>
-  
+  </div>
 
 
   <h3><a name="awards"></a>Selected Honors & Awards</h3>
   <ul>
-    <li> <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>, 2025</li>
-    <li> Alibaba Star, Alibaba Group, 2022</li>
-    <li> National Scholarship, 2017</li>
+    <li> <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship</a> (SAP) award, 2025</li>
+    <li> Alibaba Star (阿里星), Alibaba Group, 2022</li>
+    <li> National Scholarship, MoE of China, 2017</li>
     <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are awarded every year</i>), 2017</li>
-    <li> National Scholarship, 2016</li>
+    <li> National Scholarship, MoE of China, 2016</li>
   </ul>
 
 
   <h3><a name="professional"></a>Professional Service</h3>
   <ul>
     <li> Organizing Committee: SSNLP 2025 </li>
-    <li> Area Chair: ACL 2025, COLM 2025, ICLR 2025, NAACL 2025, EMNLP 2024 </li>
+    <li> Area Chair: NeurIPS 2025, ACL 2025, COLM 2025, ICLR 2025, NAACL 2025, EMNLP 2024 </li>
     <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, ICML, AAAI, IJCAI; SIGKDD, WWW, WSDM
     <li> Journal Reviewer: Computational Linguistics (CL), ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
   </ul>
 
-  <h3><a name="teaching"></a>Teaching & Talk</h3>
+  <h3><a name="talks"></a>Invited Talks</h3>
   <ul>
     <li>Nov 2024: invited keynote talk at <a href="https://wing-nus.github.io/SSNLP-2024/">SSNLP 2024</a></li>
     <li>Oct 2024: invited talk and panel discussion at <a href="https://www.switchsg.org/">Singapore Week of Innovation Technology (SWITCH) 2024</a></li>
@@ -160,8 +168,8 @@ PLS ask for permission & add a link to this website before you directly copy and
     <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
     <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
       on Sentiment Analysis (S3A)</a>.</li>
-    <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications at CUHK</li>
     <!--
+    <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications at CUHK</li>
     <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
     <li> TA for SEEM3440 Operations Research II (for UG, 2020 Fall)</li>
     <li> TA for SEEM3460/ESTR3504 Computer Processing System Concepts (for UG, 2018-19 Fall, 2019-2020 Fall, 2020-2021 Fall)</li>
